--- a/resources/sass/admin/desktop/layout/_filter.scss
+++ b/resources/sass/admin/desktop/layout/_filter.scss
@@ -20,6 +20,7 @@
         .table-filter-container{
             max-height: 0;
             overflow: hidden;
+            justify-content: center;
         }
 
     .table-filter-buttons .table-filter-button{
