--- a/resources/sass/admin/desktop/layout/_sidebar.scss
+++ b/resources/sass/admin/desktop/layout/_sidebar.scss
@@ -1,6 +1,6 @@
 
 .sidebar{
-    justify-content: center;
+   
     font-weight: bold;
     font-size: 1.2em;
     background-color: aquamarine;
@@ -16,9 +16,12 @@
     transition: 1s;
 }
 
-.dropdown{
+.dropdown-show{
     display: flex;
-    padding: 1em 2em;
+    padding: 0.5em 2em;
+    align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
 }
 
 .dropdown .dropdown-title{
@@ -36,11 +39,6 @@
 .dropdown .show{
     display: flex;
     margin-left: 2em;
-}
-
-.dropdown-show{
-    cursor: pointer;
-    justify-content: center;
 }
 
 ul{
