--- a/public/front/desktop/css/app.css
+++ b/public/front/desktop/css/app.css
@@ -1,3 +1,8 @@
+body {
+  color: #4e5359;
+  background-color: #f3f3f5;
+}
+
 .main-content {
   width: 80%;
   margin: 5em auto;
@@ -17,10 +22,11 @@
   margin-bottom: 1em;
 }
 .faqs .faq .faq-header {
-  background-color: #7DCEA0;
+  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
   padding: 0 1em;
+  align-items: center;
 }
 .faqs .faq .faq-header .faq-title h2 {
   color: black;
@@ -30,19 +36,15 @@
 .faqs .faq .faq-header .faq-title:hover h2 {
   color: azure;
 }
-.faqs .faq .faq-header .faq-button svg {
-  height: 2.5em;
-  width: 2.5em;
-}
-.faqs .faq .faq-header .faq-button:hover svg {
-  cursor: pointer;
-  fill: #92187e;
+.faqs .faq .faq-header .faq-icon svg {
+  height: 2em;
+  width: 2em;
 }
 .faqs .faq .faq-header:hover {
-  background-color: blue;
+  color: greenyellow;
+  cursor: pointer;
 }
 .faqs .faq .faq-description {
-  background-color: #9CCFB3;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s;
@@ -53,6 +55,18 @@
 }
 .faqs .faq.active .faq-description {
   max-height: 100vh;
+  padding: 1em 1em;
+}
+.faqs .faq.active .faq-description .desktop-featured {
+  display: flex;
+}
+.faqs .faq.active .faq-description .desktop-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 0.1fr);
+  margin: 2em;
+}
+.faqs .faq.active .faq-description .desktop-gallery .faq-description-image {
+  margin: 0 0.5em;
 }
 
 .faqs .faq-active .faq-description .desktop-featured {
