--- a/resources/sass/admin/desktop/layout/_tabs.scss
+++ b/resources/sass/admin/desktop/layout/_tabs.scss
@@ -26,6 +26,8 @@
     display: flex;
     background-color: #c2efe1;
     margin-bottom: 1em;
+    justify-content: space-between;
+    align-items: center;
 
     .tab-button{
         cursor: pointer;
