--- a/resources/sass/front/mobile/components/faqs.scss
+++ b/resources/sass/front/mobile/components/faqs.scss
@@ -1,53 +1,68 @@
 .faqs{
-
+    
+    margin: 0 auto;
     width: 100%;
 
     .faq{
 
-        margin-bottom: 1em;
-    
-        .faq-header{
-    
-            background-color: hsl(199, 92%, 74%);
+        width: 100%;
+
+        .faq-title-container{
+
+            border-bottom: 0.2em solid $white;
             display: flex;
-            justify-content: space-between;
-            padding: 0.5em;
-    
-            .faq-title h2{
-                color: hsl(0, 0%, 0%);
-                line-height: 2em;
-                margin: 0;
+            height: max-content;
+            width: 100%;
+
+            .faq-title{
+                margin: 0 0.5em;
+                width: 90%;
             }
 
-                .faq-button svg{
-                height: 2.5em;
-                width: 2.5em;
+            .faq-title h3{
+                color: $white;
+                font-weight: 400;
             }
-    
-            .faq-button:hover svg{
+
+            .faq-plus-button {
                 cursor: pointer;
-                fill:rgb(146, 24, 126);
+                margin: 1em;
+                @include plusMinus(1.5em, 0.2em, $white);
             }
+        }
+
+        .faq-title-container:hover{
+            background-color: $blue-dark;
         }
 
         .faq-description{
-            
-            background-color: hsl(180, 100%, 86%);
+
+            background-color: $white;
             max-height: 0;
             overflow: hidden;
-            transition: max-height 1s;
-    
+            transition: max-height 0.5s;
+            width: 100%;
+
             p{
-                color: hsl(0, 0%, 0%);
-                margin: 0 0.5em;
+                color: $black;
+                font-weight: 200;
+                margin: 1em;
             }
         }
-        
-    }  
+    }
 
-    .faq.active .faq-description{
-            max-height: 100vh;
+    .faq.active{
+        
+        .faq-title-container{
+            background-color: $blue-dark;
         }
+
+        .faq-description{
+            max-height: 200vh;
+        }
+    }
     
 }
+
+
 
