--- a/resources/sass/front/mobile/app.scss
+++ b/resources/sass/front/mobile/app.scss
@@ -1,4 +1,9 @@
 @charset "utf8";
 
+@import "../base/variables";
+@import "../base/mixins";
+@import "../base/contents";
+@import "../base/normalize";
+@import "../base/typography";
 @import "layout/master";
 @import "components/faqs";
