--- a/resources/sass/admin/desktop/layout/_save.scss
+++ b/resources/sass/admin/desktop/layout/_save.scss
@@ -3,16 +3,13 @@
     height: 5em;
     margin-left: 60vh;
     margin-top: 8vh;
+    border: solid yellow;
     
 }
 
-.save-message{
-        display: none;
+.save-show
 
-    }
-
-
-#save-show.show{
+.show{
 
     .save-message{
         justify-content: right;
