--- a/resources/sass/front/desktop/components/faqs.scss
+++ b/resources/sass/front/desktop/components/faqs.scss
@@ -3,8 +3,9 @@
     margin: 3% auto;
     width: 80%;
 
+
     .faqs-title h3{
-        color: $white;
+        color: $blue-dark;
         font-size: 2.5em;
         font-weight: 600;
         text-align: center;
@@ -13,6 +14,7 @@
     .faq{
 
         width: 100%;
+        cursor: pointer;
 
         .faq-title-container{
 
@@ -20,6 +22,7 @@
             display: flex;
             height: 10vh;
             width: 100%;
+            align-items: center;
 
             @include respond-to('lg') {
                 height: 6vh;
@@ -31,7 +34,7 @@
             }
 
             .faq-title h3{
-                color: $white;
+                color: green;
                 font-weight: 400;
             }
 
@@ -43,7 +46,7 @@
         }
 
         .faq-title-container:hover{
-            background-color: $blue-dark;
+            background-color: white;
         }
 
         .faq-description{
@@ -91,7 +94,7 @@
     .faq.active{
         
         .faq-title-container{
-            background-color: $blue-dark;
+            background-color: white;
         }
 
         .faq-description{
