--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -789,10 +789,9 @@ li {
   height: 5em;
   margin-left: 60vh;
   margin-top: 8vh;
-  border: solid yellow;
 }
 
-.save-show .show .save-message {
+.show .save-message {
   justify-content: right;
   height: 15vh;
   margin-top: 5em;
