--- a/resources/sass/admin/desktop/layout/_save.scss
+++ b/resources/sass/admin/desktop/layout/_save.scss
@@ -3,11 +3,12 @@
     height: 5em;
     margin-left: 60vh;
     margin-top: 8vh;
-    border: solid yellow;
     
 }
 
-.save-show
+.save-show{
+   
+}
 
 .show{
 
