--- a/resources/sass/front/desktop/layout/_master.scss
+++ b/resources/sass/front/desktop/layout/_master.scss
@@ -3,6 +3,10 @@ body{
     background-color: #f3f3f5;
 }
 
+ul{
+    padding: 0;
+}
+
 
 .main-content{
     width: 80%;
@@ -14,3 +18,5 @@ body{
         margin: 0;
     }
 }
+
+
