--- a/resources/sass/front/mobile/components/fodder.scss
+++ b/resources/sass/front/mobile/components/fodder.scss
@@ -1,8 +1,8 @@
 
 .fodders-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 360px);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 360px);
     grid-gap: 2rem;
 
     .fodder-item{
@@ -83,6 +83,6 @@
 }
 
 .small-numbers{
-    font-size: .8em;
+    font-size: 0.8em;
 }
     
