--- a/resources/sass/admin/desktop/app.scss
+++ b/resources/sass/admin/desktop/app.scss
@@ -17,3 +17,5 @@
 @import "layout/modal-delete";
 @import "layout/modal-image";
 @import "layout/wait";
+@import "components/items-nestables";
+@import "components/modal-menu-item";
