--- a/resources/sass/front/desktop/app.scss
+++ b/resources/sass/front/desktop/app.scss
@@ -6,5 +6,8 @@
 @import "../base/normalize";
 @import "../base/typography";
 @import "layout/master";
+@import "layout/topbar";
+@import "layout/header";
 @import "components/faqs";
 @import "components/fodder";
+@import "components/menu";
