--- a/resources/sass/front/desktop/app.scss
+++ b/resources/sass/front/desktop/app.scss
@@ -8,6 +8,7 @@
 @import "layout/master";
 @import "layout/topbar";
 @import "layout/header";
+@import "layout/footer";
 @import "components/faqs";
 @import "components/fodder";
 @import "components/menu";
