--- a/public/front/desktop/css/app.css
+++ b/public/front/desktop/css/app.css
@@ -613,6 +613,74 @@ ul {
   margin-right: 2em;
 }
 
+.footer {
+  background-color: #232323;
+  color: #f1f1f4;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  margin-top: 0px;
+  padding: 5% 10%;
+  position: relative;
+  width: 80%;
+}
+
+.footer:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 20px;
+  background-size: 40px 40px;
+  transform: rotate(180deg);
+}
+
+.footer:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 30px;
+  background-size: 80px 40px;
+  transform: rotate(180deg);
+}
+
+.footer .footer-element-title {
+  color: white;
+  margin-bottom: 1.5em;
+}
+
+.footer .booking-button {
+  margin-top: 2em;
+}
+
+.footer .footer-element-container p, .footer .footer-element-container a, .footer .footer-element-container h1, .footer .footer-element-container h2, .footer .footer-element-container h3, .footer .footer-element-container h4, .footer .footer-element-container h5 {
+  color: white;
+  font-weight: 400;
+}
+
+.footer .footer-element-icon {
+  margin-right: 0.5em;
+}
+.footer .footer-element-icon svg {
+  height: 1em;
+  width: 1em;
+}
+.footer .footer-element-icon svg path {
+  fill: white;
+}
+
+.footer .footer-socials-container {
+  display: flex;
+}
+
+.footer .footer-contact-item {
+  display: flex;
+  margin: 0.5em 0;
+}
+
 .faqs {
   margin: 3% auto;
   width: 80%;
