--- a/resources/sass/front/desktop/app.scss
+++ b/resources/sass/front/desktop/app.scss
@@ -9,6 +9,7 @@
 @import "layout/topbar";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/contact";
 @import "components/faqs";
 @import "components/fodder";
 @import "components/menu";
