--- a/resources/sass/front/desktop/layout/_footer.scss
+++ b/resources/sass/front/desktop/layout/_footer.scss
@@ -51,6 +51,11 @@
 	}
 }
 
+.footer-element .fotter-logo{
+	color: #232323;
+}
+
+
 .footer .footer-element-icon{
 
 	margin-right: 0.5em;
@@ -71,5 +76,5 @@
 
 .footer .footer-contact-item{
 	display: flex;
-	margin: 0.5em 0;
+	
 }
