--- a/resources/sass/front/desktop/layout/_master.scss
+++ b/resources/sass/front/desktop/layout/_master.scss
@@ -1,12 +1,27 @@
 body{
     color: #4e5359;
     background-color: #f3f3f5;
+    font-size: .9em;
 }
 
 ul{
     padding: 0;
 }
 
+input{
+    margin-top: .2em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 1.7em;
+    width: 100%;
+}
+
+textarea{
+    width: 100%;
+    margin-top: .2em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 
 .main-content{
     width: 80%;
