--- a/resources/sass/front/desktop/app.scss
+++ b/resources/sass/front/desktop/app.scss
@@ -10,6 +10,9 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/contact";
+@import "layout/modal_localization";
 @import "components/faqs";
 @import "components/fodder";
 @import "components/menu";
+@import "components/localization";
+@import "components/contact";
