--- a/resources/sass/front/desktop/layout/_topbar.scss
+++ b/resources/sass/front/desktop/layout/_topbar.scss
@@ -4,6 +4,7 @@
     display: flex;
     padding: 0 1em;
 	height: max-content;
+    justify-content: space-between;
   
     .phone-element{
         display: flex;
