--- a/resources/sass/admin/desktop/layout/_save.scss
+++ b/resources/sass/admin/desktop/layout/_save.scss
@@ -1,21 +1,39 @@
-.save-container{
-    width: 10em;
-    height: 5em;
-    margin-left: 60vh;
-    margin-top: 8vh;
+#save-container{
+
+    display: none;
+    transition: display 4s;
     
-}
+    p{
+        margin: 0;
+        color: aliceblue;
+        font-weight: 900;
+    }
 
-.save-show{
+    svg{
+        margin-right: 1em;
+    }
 
-   
-}
+    &.show{
+        display: flex;
+        width: 20em;
+        height: 5em;
+        background-color: grey;
+        text-align: center;
+        position: absolute;
+        font-size: .8em;
+        top: 5%;
+        left: 80%;
+        opacity: 90%;
+        border-radius: 2px;
+        box-shadow: 0px 0px 7px #292929;
+        -moz-box-shadow: 0px 0px 7px #292929;
+        -webkit-box-shadow: 0px 0px 7px #292929;
+        -webkit-animation: move 2s ease-in;
 
-.show{
+        .save-show{
+            display: flex;
+            margin: auto 1em;
+        }
+    }
 
-    .save-message{
-        justify-content: right;
-        height: 15vh;
-        margin-top: 5em;
-    }   
 }
