--- a/resources/sass/admin/desktop/layout/_save.scss
+++ b/resources/sass/admin/desktop/layout/_save.scss
@@ -13,6 +13,10 @@
         margin-right: 1em;
     }
 
+    @keyframes successful {
+        100%   { left: 70%; }
+    }
+
     &.show{
         display: flex;
         width: 20em;
@@ -22,13 +26,13 @@
         position: absolute;
         font-size: .8em;
         top: 5%;
-        left: 80%;
+        left: 120%;
         opacity: 90%;
         border-radius: 2px;
         box-shadow: 0px 0px 7px #292929;
         -moz-box-shadow: 0px 0px 7px #292929;
-        -webkit-box-shadow: 0px 0px 7px #292929;
-        -webkit-animation: move 2s ease-in;
+        animation-name: successful;
+        animation-duration: 2s;
 
         .save-show{
             display: flex;
