--- a/resources/sass/admin/desktop/layout/_tabla.scss
+++ b/resources/sass/admin/desktop/layout/_tabla.scss
@@ -63,5 +63,5 @@
 .tabla-cabecera{
     font-weight: bold;
     font-family: 'Montserrat', sans-serif; 
-    font-size: 1rem;
+    font-size: .9em;
 }
