--- a/resources/sass/front/desktop/layout/_footer.scss
+++ b/resources/sass/front/desktop/layout/_footer.scss
@@ -37,9 +37,7 @@
 }
 
 .footer .booking-button{
-	
 	margin-top: 2em;
-	
 	
 }
 
@@ -76,5 +74,6 @@
 
 .footer .footer-contact-item{
 	display: flex;
+	align-items: center;
 	
 }
