--- a/resources/sass/admin/desktop/layout/_tabs-locale.scss
+++ b/resources/sass/admin/desktop/layout/_tabs-locale.scss
@@ -24,6 +24,10 @@
         padding: 0 1em;
         margin-bottom: 1em;
 
+        p{
+            margin: 0.5em;
+        }
+
     }
 
     .tab-language-button:hover{
