--- a/resources/sass/admin/desktop/layout/_filter.scss
+++ b/resources/sass/admin/desktop/layout/_filter.scss
@@ -1,14 +1,16 @@
 .table-filter{
     width: 100%;
     font-size: 1em;
-    background-color: #cccccc;
+    background-color: #c2efe1;
     cursor: pointer;
-    
 
         &.filter-active{
            
             .table-filter-container{
+                margin: auto auto;
                 max-height: 50vh;
+                max-width: 40%;
+                padding: 1em 1em;
                 overflow: visible;
                 cursor: pointer;
             }
@@ -30,13 +32,16 @@
 
         &.button-active{
             display: flex;
+            justify-content: center;
             align-items: center;
-            justify-content: right;
 
-            .p{
-                font-size: 2em;
-            }
-            
+            p{
+                margin: 0;
+            }  
+        }
+
+        .table-filter-button .open-f{
+            margin: 0;
         }
     }
     
