--- a/resources/sass/admin/desktop/layout/_tabs.scss
+++ b/resources/sass/admin/desktop/layout/_tabs.scss
@@ -31,6 +31,10 @@
     .tab-button{
         cursor: pointer;
         padding: 0 1em;
+
+        p{
+            margin: 0.5em;
+        }
     }
 
     .tab-button.active-tabs{
